ex5/testdata/typechecker/error/Div.java
class PrecedenceTest{
    public static void main(String[] a){
	    int x;
        x = 123 / null;
	}
}

